--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -40,3 +40,41 @@ info:
   company.name: hand
   build.artifactId: $project.artifactId$
   build.version: $project.version$
+
+---
+server:
+  port: 8001
+spring:
+  profiles: test
+  application:
+    name: microservicecloud-config-dept-client
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://localhost:3306/cloudDB02?useSSL=false
+    username: root
+    password: 123456
+    dbcp2:
+      min-idle: 5                         #数据库连接池的最小维持连接数
+      initial-size: 5                     #初始化连接数
+      max-total: 5                        #最大连接数
+      max-wait-millis: 200                #等待连接获取的最大超时时间
+
+mybatis:
+  config-location: classpath:mybatis/mybatis.cfg.xml
+  type-aliases-package: com.study.springcloud.entities
+  mapper-locations: classpath:mybatis/mapper/**/*.xml
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://peer1:7001/eureka/
+  instance:
+    instance-id: microspringcloud-dept8001
+    prefer-ip-address: true
+
+info:
+  app.name: mircoservice
+  company.name: hand
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
